--- a/src/app/Template/pg-register/pg-register.component.html
+++ b/src/app/Template/pg-register/pg-register.component.html
@@ -75,7 +75,7 @@
                       <div class="col-12 form-group" style="margin-top: -10px;">
                         <label for="telefono" class="form-label" style="font-size: 14px;">Teléfono</label>
                         <div class="input-group has-validation">
-                          <input type="text" name="telefono" [(ngModel)]="telefono" pattern="^09\d{8}$" class="form-control" id="telefono" required style="font-size: 13px;">
+                          <input type="text" name="telefono" [(ngModel)]="telefono" maxlength="10" pattern="^09\d{8}$" class="form-control" id="telefono" required style="font-size: 13px;">
                           <div class="invalid-feedback floating-invalid-feedback">Ingresa tu número telefónico (10 dígitos)</div>
                         </div>
                       </div>
@@ -167,7 +167,7 @@
                       <div class="col-12 form-group" style="margin-top: -10px;">
                         <label for="telefono" class="form-label" style="font-size: 14px;">Teléfono</label>
                         <div class="input-group has-validation">
-                          <input type="text" name="telefono" [(ngModel)]="telefono" pattern="^09\d{8}$" class="form-control" id="telefono" required style="font-size: 13px;">
+                          <input type="text" name="telefono" [(ngModel)]="telefono" maxlength="10" pattern="^09\d{8}$" class="form-control" id="telefono" required style="font-size: 13px;">
                           <div class="invalid-feedback floating-invalid-feedback">Ingresa tu número telefónico (10 dígitos)</div>
                         </div>
                       </div>
