--- a/src/app/Template/pg-recuperar/pg-recuperar.component.html
+++ b/src/app/Template/pg-recuperar/pg-recuperar.component.html
@@ -134,8 +134,8 @@
       </section>
     </div>
     
-    <p-messages [(value)]="messages1" [enableService]="false" [closable]="true" class="floating-message"></p-messages>
-    <p-messages [(value)]="messages2" [enableService]="false" [closable]="true" class="floating-message"></p-messages>
+    <p-messages [(value)]="messages1" [enableService]="false" [closable]="false" class="floating-message"></p-messages>
+    <p-messages [(value)]="messages2" [enableService]="false" [closable]="false" class="floating-message"></p-messages>
 </main><!-- End #main -->
 
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
