--- a/src/app/ModuloAdministracion/pg-principaladministracion/pg-principaladministracion.component.html
+++ b/src/app/ModuloAdministracion/pg-principaladministracion/pg-principaladministracion.component.html
@@ -6,7 +6,6 @@
             <span>&nbsp;Materiales</span>
         </ng-template>
         <app-pg-material></app-pg-material>
-       
     </p-tabPanel>
     <p-tabPanel header="Header II">
         <ng-template pTemplate="header">
@@ -14,7 +13,6 @@
             <span>&nbsp;Ofertas</span>
         </ng-template>
         <app-pg-oferta></app-pg-oferta>
-        
     </p-tabPanel>
     <p-tabPanel header="Header III">
         <ng-template pTemplate="header">
@@ -22,31 +20,37 @@
             <span>&nbsp;Puntos Verdes</span>
         </ng-template>
         <app-pg-puntoverde></app-pg-puntoverde>
-
     </p-tabPanel>
-    <p-tabPanel header="Header III">
+    <p-tabPanel header="Header IV">
         <ng-template pTemplate="header">
             <i class="pi pi-cog"></i>
             <span>&nbsp;Negocios</span>
         </ng-template>
         <app-pg-negocio></app-pg-negocio>
     </p-tabPanel>
-    <p-tabPanel header="Header III">
+    <p-tabPanel header="Header V">
         <ng-template pTemplate="header">
             <i class="pi pi-cog"></i>
             <span>&nbsp;Administradores</span>
         </ng-template>
         <app-pg-administradores></app-pg-administradores>
     </p-tabPanel>
-    <p-tabPanel header="Header III">
+</p-tabView>
+<!-- 
+<p-tabView>
+    <p-tabPanel header="Header IV">
         <ng-template pTemplate="header">
             <i class="pi pi-cog"></i>
-            <span>&nbsp;Tipo Voluntario</span>
-           
+            <span>&nbsp;Negocios</span>
         </ng-template>
-        <p>
-            At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa
-            qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus.
-        </p>
+        <app-pg-negocio></app-pg-negocio>
     </p-tabPanel>
-</p-tabView>
+    <p-tabPanel header="Header V">
+        <ng-template pTemplate="header">
+            <i class="pi pi-cog"></i>
+            <span>&nbsp;Administradores</span>
+        </ng-template>
+        <app-pg-administradores></app-pg-administradores>
+    </p-tabPanel>
+</p-tabView> 
+-->
