--- a/src/app/ModuloNegocio/pg-registroreciclaje/pg-registroreciclaje.component.html
+++ b/src/app/ModuloNegocio/pg-registroreciclaje/pg-registroreciclaje.component.html
@@ -1,5 +1,5 @@
-<p-messages [(value)]="messages2" [enableService]="false" [closable]="false" class="floating-message"></p-messages>
-<p-messages [(value)]="messages1" [enableService]="false" [closable]="false" class="floating-message"></p-messages>
+<p-messages [(value)]="messages2" [enableService]="false" [closable]="true" class="floating-message"></p-messages>
+<p-messages [(value)]="messages1" [enableService]="false" [closable]="true" class="floating-message"></p-messages>
 <div class="pagetitle">
     <h1>Registro de reciclaje</h1>
   </div><!-- End Page Title -->
