--- a/src/app/ModuloNegocio/pg-gestionofertas/pg-gestionofertas.component.html
+++ b/src/app/ModuloNegocio/pg-gestionofertas/pg-gestionofertas.component.html
@@ -1,7 +1,7 @@
 <p-messages [(value)]="messages2" [enableService]="false" [closable]="true" class="floating-message"></p-messages>
 <p-messages [(value)]="messages1" [enableService]="false" [closable]="true" class="floating-message"></p-messages>
 <div class="pagetitle">
-    <h1>Registro de reciclaje</h1>
+    <h1>Gestion de Ofertas</h1>
   </div><!-- End Page Title -->
   
   <section class="section dashboard">
@@ -22,28 +22,80 @@
         </div>
 
         <div class="card-body">
-          <h5 class="card-title"> {{ngc.nombre}} <span>/{{ngc.propietario +" - "+ngc.direccion}}</span></h5>
+          <h5 class="card-title"> Ofertas <span>/{{ngc.nombre}}</span></h5>
           <!-- Tabla de todas las ofertas -->
-
-          <p-table [value]="all_ofertas" [tableStyle]="{ 'min-width': '50rem' }">
+          <p-table
+            #dt1
+            [value]="all_ofertas"
+            dataKey="ofertas_id"
+            [rows]="10"
+            [showCurrentPageReport]="true"
+            [rowsPerPageOptions]="[10, 25, 50]"
+            [loading]="loading"
+            [paginator]="true"
+            currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
+            [globalFilterFields]="['descripcion', 'gc_necesarios', 'negocio_id']"
+            [scrollable]="true"
+            scrollHeight="500px"
+            [tableStyle]="{ 'min-width': '50rem' }"
+            [sortMode]="'single'"
+        >
+            <ng-template pTemplate="caption">
+                <div class="flex">
+                    <button pButton label="Clear" class="p-button-outlined" icon="pi pi-filter-slash" (click)="clear(dt1)"></button>
+                    <span class="p-input-icon-left ml-auto">
+                        <i class="pi pi-search"></i>
+                        <input pInputText type="text" (input)="applyFilter($event)" placeholder="Search keyword" />
+                    </span>
+                </div>
+            </ng-template>
             <ng-template pTemplate="header">
-              <tr>
-                <th>Ofertas</th>
-                <th>GC Necesarios</th>
-                <th>Negocio</th>
-                <th>Duración</th>
-              </tr>
+                <tr>
+                    <th pSortableColumn="descripcion">
+                        <div class="flex align-items-center">
+                            Ofertas <p-sortIcon field="descripcion"></p-sortIcon>
+                            <p-columnFilter type="text" field="descripcion" display="menu"></p-columnFilter>
+                        </div>
+                    </th>
+                    <th pSortableColumn="gc_necesarios">
+                        <div class="flex align-items-center">
+                            Coste <p-sortIcon field="gc_necesarios"></p-sortIcon>
+                            <p-columnFilter type="numeric" field="gc_necesarios" display="menu"></p-columnFilter>
+                        </div>
+                    </th>
+                    <th pSortableColumn="fecha_inicio">
+                        <div class="flex align-items-center">
+                            Inicio <p-sortIcon field="fecha_inicio"></p-sortIcon>
+                        </div>
+                    </th>
+                    <th pSortableColumn="fecha_fin">
+                        <div class="flex align-items-center">
+                            Fin <p-sortIcon field="fecha_fin"></p-sortIcon>
+                        </div>
+                    </th>
+                </tr>
             </ng-template>
             <ng-template pTemplate="body" let-oferta>
-              <tr>
-                <td>{{ oferta.descripcion }}</td>
-                <td>{{ oferta.gc_necesarios }}</td>
-                <td>{{ oferta.negocio_id }}</td>
-                <td style="font-size: 15px;">{{ oferta.fecha_inicio | date:'short' }} - {{ oferta.fecha_fin | date:'short' }}</td>
-              </tr>
+                <tr>
+                    <td>{{ oferta.descripcion }}</td>
+                    <td>{{ "₵ "+oferta.gc_necesarios+""}}</td>
+                    <td style="font-size: 15px;">
+                        {{ oferta.fecha_inicio | date:'short' }}
+                    </td>
+                    <td style="font-size: 15px;">
+                        {{ oferta.fecha_fin | date:'short' }}
+                    </td>
+                </tr>
             </ng-template>
-          </p-table>
-                       
+            <ng-template pTemplate="emptymessage">
+                <tr>
+                    <td colspan="5">No se encontraron ofertas.</td>
+                </tr>
+            </ng-template>
+        </p-table>
+
+
+
 
           <!-- Fin Tabla de todas las ofertas -->
         </div>
@@ -62,5 +114,7 @@
       </div><!-- End Left side columns -->
     </div>
   </section>
+
+
 
 
