--- a/src/app/ModuloNegocio/pg-dashnegocio/pg-dashnegocio.component.html
+++ b/src/app/ModuloNegocio/pg-dashnegocio/pg-dashnegocio.component.html
@@ -323,14 +323,14 @@
                 </div>
 
                 <div class="card-body">
-                  <h5 class="card-title">Tus ofertas <span>| Todos</span></h5>
+                  <h5 class="card-title">Tus ofertas <span>| Tienes</span></h5>
 
                   <div class="d-flex align-items-center">
                     <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
                       <i class="bi bi-cart"></i>
                     </div>
                     <div class="ps-3">
-                      <h6>145</h6>
+                      <h6>{{this.cant_ofts+" "}}<span style="font-size: 20px;">ofertas</span></h6>
                       <span class="text-success small pt-1 fw-bold">12%</span> <span class="text-muted small pt-2 ps-1">increase</span>
 
                     </div>
@@ -358,7 +358,7 @@
                 </div>
 
                 <div class="card-body">
-                  <h5 class="card-title">Tus puntos verdes <span>| Total</span></h5>
+                  <h5 class="card-title">Tus puntos verdes <span>| Tienes</span></h5>
 
                   <div class="d-flex align-items-center">
                     <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
