--- a/src/app/ModuloNegocio/pg-verofertas/pg-verofertas.component.html
+++ b/src/app/ModuloNegocio/pg-verofertas/pg-verofertas.component.html
@@ -1,7 +1,7 @@
 <p-messages [(value)]="messages2" [enableService]="false" [closable]="true" class="floating-message"></p-messages>
 <p-messages [(value)]="messages1" [enableService]="false" [closable]="true" class="floating-message"></p-messages>
 <div class="pagetitle">
-    <h1>Registro de reciclaje</h1>
+    <h1>Ofertas en GreenPoint</h1>
   </div><!-- End Page Title -->
   
   <section class="section dashboard">
@@ -22,7 +22,7 @@
         </div>
 
         <div class="card-body">
-          <h5 class="card-title"> {{ngc.nombre}} <span>/{{ngc.propietario +" - "+ngc.direccion}}</span></h5>
+          <h5 class="card-title"> Ofertas <span>/Todas las ofertas disponibles</span></h5>
           <!-- Tabla de todas las ofertas -->
 
             <!--
@@ -46,74 +46,83 @@
           </p-table>
           -->
           <p-table
-          #dt1
-          [value]="all_ofertas"
-          dataKey="ofertas_id"
-          [rows]="10"
-          [showCurrentPageReport]="true"
-          [rowsPerPageOptions]="[10, 25, 50]"
-          [loading]="loading"
-          [paginator]="true"
-          currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
-          [globalFilterFields]="['descripcion', 'gc_necesarios', 'negocio_id']"
-          [scrollable]="true"
-          scrollHeight="500px"
-          [tableStyle]="{ 'min-width': '50rem' }"
-      >
-          <ng-template pTemplate="caption">
-              <div class="flex">
-                  <button pButton label="Clear" class="p-button-outlined" icon="pi pi-filter-slash" (click)="clear(dt1)"></button>
-                  <span class="p-input-icon-left ml-auto">
-                      <i class="pi pi-search"></i>
-                      <input pInputText type="text" (input)="applyFilter($event)" placeholder="Search keyword" />
-                  </span>
-              </div>
-          </ng-template>
-          <ng-template pTemplate="header">
-              <tr>
-                  <th>
-                      <div class="flex align-items-center">
-                          Ofertas
-                          <p-columnFilter type="text" field="descripcion" display="menu"></p-columnFilter>
-                      </div>
-                  </th>
-                  <th>
-                      <div class="flex align-items-center">
-                          GC Necesarios
-                          <p-columnFilter type="numeric" field="gc_necesarios" display="menu"></p-columnFilter>
-                      </div>
-                  </th>
-                  <th>
-                      <div class="flex align-items-center">
-                          Negocio
-                          <p-columnFilter type="numeric" field="negocio_id" display="menu"></p-columnFilter>
-                      </div>
-                  </th>
-                  <th>
-                      <div class="flex align-items-center">
-                          Duración
-                          <p-columnFilter type="date" field="fecha_inicio" display="menu"></p-columnFilter>
-                      </div>
-                  </th>
-              </tr>
-          </ng-template>
-          <ng-template pTemplate="body" let-oferta>
-              <tr>
-                  <td>{{ oferta.descripcion }}</td>
-                  <td>{{ oferta.gc_necesarios }}</td>
-                  <td>{{ oferta.negocio_id }}</td>
-                  <td style="font-size: 15px;">
-                      {{ oferta.fecha_inicio | date:'short' }} - {{ oferta.fecha_fin | date:'short' }}
-                  </td>
-              </tr>
-          </ng-template>
-          <ng-template pTemplate="emptymessage">
-              <tr>
-                  <td colspan="4">No se encontraron ofertas.</td>
-              </tr>
-          </ng-template>
-      </p-table>
-      
+            #dt1
+            [value]="all_ofertas"
+            dataKey="ofertas_id"
+            [rows]="10"
+            [showCurrentPageReport]="true"
+            [rowsPerPageOptions]="[10, 25, 50]"
+            [loading]="loading"
+            [paginator]="true"
+            currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
+            [globalFilterFields]="['descripcion', 'gc_necesarios', 'negocio_id']"
+            [scrollable]="true"
+            scrollHeight="500px"
+            [tableStyle]="{ 'min-width': '50rem' }"
+            [sortMode]="'single'"
+        >
+            <ng-template pTemplate="caption">
+                <div class="flex">
+                    <button pButton label="Clear" class="p-button-outlined" icon="pi pi-filter-slash" (click)="clear(dt1)"></button>
+                    <span class="p-input-icon-left ml-auto">
+                        <i class="pi pi-search"></i>
+                        <input pInputText type="text" (input)="applyFilter($event)" placeholder="Search keyword" />
+                    </span>
+                </div>
+            </ng-template>
+            <ng-template pTemplate="header">
+                <tr>
+                    <th pSortableColumn="descripcion">
+                        <div class="flex align-items-center">
+                            Ofertas <p-sortIcon field="descripcion"></p-sortIcon>
+                            <p-columnFilter type="text" field="descripcion" display="menu"></p-columnFilter>
+                        </div>
+                    </th>
+                    <th pSortableColumn="gc_necesarios">
+                        <div class="flex align-items-center">
+                            Coste <p-sortIcon field="gc_necesarios"></p-sortIcon>
+                            <p-columnFilter type="numeric" field="gc_necesarios" display="menu"></p-columnFilter>
+                        </div>
+                    </th>
+                    <th pSortableColumn="negocio_id">
+                        <div class="flex align-items-center">
+                            Negocio <p-sortIcon field="negocio_id"></p-sortIcon>
+                            <p-columnFilter type="numeric" field="negoc o_id" display="menu"></p-columnFilter>
+                        </div>
+                    </th>
+                    <th pSortableColumn="fecha_inicio">
+                        <div class="flex align-items-center">
+                            Inicio <p-sortIcon field="fecha_inicio"></p-sortIcon>
+                        </div>
+                    </th>
+                    <th pSortableColumn="fecha_fin">
+                        <div class="flex align-items-center">
+                            Fin <p-sortIcon field="fecha_fin"></p-sortIcon>
+                        </div>
+                    </th>
+                </tr>
+            </ng-template>
+            <ng-template pTemplate="body" let-oferta>
+                <tr>
+                    <td>{{ oferta.descripcion }}</td>
+                    <td>{{ "₵ "+oferta.gc_necesarios+""}}</td>
+                    <td>{{ oferta.negocio }}</td>
+                    <td style="font-size: 15px;">
+                        {{ oferta.fecha_inicio | date:'short' }}
+                    </td>
+                    <td style="font-size: 15px;">
+                        {{ oferta.fecha_fin | date:'short' }}
+                    </td>
+                </tr>
+            </ng-template>
+            <ng-template pTemplate="emptymessage">
+                <tr>
+                    <td colspan="5">No se encontraron ofertas.</td>
+                </tr>
+            </ng-template>
+        </p-table>
+
+
 
 
           <!-- Fin Tabla de todas las ofertas -->
