--- a/src/app/ModuloNegocio/pg-gestionofertas/pg-gestionofertas.component.html
+++ b/src/app/ModuloNegocio/pg-gestionofertas/pg-gestionofertas.component.html
@@ -47,6 +47,14 @@
                         <i class="pi pi-search"></i>
                         <input pInputText type="text" (input)="applyFilter($event)" placeholder="Search keyword" />
                     </span>
+                    <div class="p-toolbar-group-end">
+                      <p-button
+                        type="button"
+                        icon="pi pi-plus"
+                        styleClass="p-button-text"
+                        (click)="ModalNuevoInformacion()"
+                      ></p-button>
+                    </div>
                 </div>
             </ng-template>
             <ng-template pTemplate="header">
@@ -73,6 +81,11 @@
                             Fin <p-sortIcon field="fecha_fin"></p-sortIcon>
                         </div>
                     </th>
+                    <th>
+                      <div class="flex align-items-center">
+                          Gestión
+                      </div>
+                  </th>
                 </tr>
             </ng-template>
             <ng-template pTemplate="body" let-oferta>
@@ -85,6 +98,20 @@
                     <td style="font-size: 15px;">
                         {{ oferta.fecha_fin | date:'short' }}
                     </td>
+                    <td>
+                      <p-button
+                        type="button"
+                        icon="pi pi-pencil"
+                        styleClass="p-button-text"
+                        (click)="ModalEditarInformacion(oferta)"
+                      ></p-button>
+                      <p-button
+                        type="button"
+                        icon="pi pi-trash"
+                        styleClass="p-button-text"
+                        (click)="ModalCambiarEstado(oferta)"
+                      ></p-button>
+                    </td>
                 </tr>
             </ng-template>
             <ng-template pTemplate="emptymessage">
@@ -93,11 +120,90 @@
                 </tr>
             </ng-template>
         </p-table>
-
-
-
-
           <!-- Fin Tabla de todas las ofertas -->
+
+
+          <p-dialog
+            header="Nuevo"
+            [(visible)]="visibleNuevo"
+            [modal]="true"
+            [style]="{ width: '25vw' }"
+            [draggable]="false"
+            [resizable]="false"
+          >
+          <ng-template pTemplate="header">
+            <span class="text-xl font-bold">Nuevo</span>
+          </ng-template>
+          <ng-template pTemplate="content">
+            <div class="p-inputgroup">
+              <span class="p-inputgroup-addon">
+                  <i class="pi pi-pencil"></i>
+              </span>
+              <input pInputText placeholder="Oferta" [(ngModel)]="newoferta" class="p-inputtext-sm" (input)="newoferta = newoferta"/>
+            </div>
+          </ng-template>
+          
+          <ng-template pTemplate="footer">
+            <p-button icon="pi pi-save"  label="Registrar" styleClass="p-button-sm" (click)="RegistrarNuevo()"></p-button>
+          </ng-template>
+          
+          </p-dialog>
+
+
+          <p-dialog
+            header="Actualización"
+            [(visible)]="visibleEditar"
+            [modal]="true"
+            [style]="{ width: '25vw' }"
+            [draggable]="false"
+            [resizable]="false"
+          >
+          <ng-template pTemplate="header">
+            <span class="text-xl font-bold">Actualización</span>
+          </ng-template>
+          
+          <ng-template pTemplate="content">
+            <div class="p-inputgroup">
+              <span class="p-inputgroup-addon">
+                  <i class="pi pi-pencil"></i>
+              </span>
+              <input pInputText placeholder="Valor" [(ngModel)]="objSeleccion.int_valor" class="p-inputtext-sm"/>
+            </div>
+          </ng-template>
+          
+          <ng-template pTemplate="footer">
+            <p-button icon="pi pi-save"  label="Actualizar" styleClass="p-button-sm" (click)="RegistrarActualizacion()"></p-button>
+          </ng-template>
+      
+          </p-dialog>
+
+
+          <p-dialog
+            header="Estado"
+            [(visible)]="visibleEstado"
+            [modal]="true"
+            [style]="{ width: '25vw' }"
+            [draggable]="false"
+            [resizable]="false"
+          >
+          <ng-template pTemplate="header">
+            <span class="text-xl font-bold">¿Estas seguro de eliminar esta oferta?</span>
+          </ng-template>
+          
+          <ng-template pTemplate="content">
+            <div class="p-inputgroup">
+              <span class="p-inputgroup-addon">
+                  <i class="pi pi-pencil"></i>
+              </span>
+              <input pInputText placeholder="Estado" [(ngModel)]="objSeleccion.int_valor" class="p-inputtext-sm" readonly/>
+            </div>
+          </ng-template>
+          
+          <ng-template pTemplate="footer">
+            <p-button icon="pi pi-save"  label="Guardar" styleClass="p-button-sm" (click)="EstadoCambiarActualizacion()"></p-button>
+          </ng-template>
+          
+          </p-dialog>
         </div>
 
       </div>
