Gestion de ofertas

--- a/src/app/ModuloNegocio/pg-dashnegocio/pg-dashnegocio.component.html
+++ b/src/app/ModuloNegocio/pg-dashnegocio/pg-dashnegocio.component.html
@@ -13,8 +13,8 @@
   <!-- Favicons -->
   <link href="assets2/img/favicon.png" rel="icon">
   <link href="assets2/img/apple-touch-icon.png" rel="apple-touch-icon">
-  <!-- Bootstrap CSS -->
-  <link href="https://stackpath.bootstrapcdn.com/bootstrap/5.3.3/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Bootstrap CSS 
+  <link href="https://stackpath.bootstrapcdn.com/bootstrap/5.3.3/css/bootstrap.min.css" rel="stylesheet">-->
   <!-- Optionally, you can include Popper.js for tooltips and popovers 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.11.6/umd/popper.min.js"></script>-->
   <!-- Bootstrap JS 
