--- a/src/app/ModuloNegocio/pg-gestionofertas/pg-gestionofertas.component.html
+++ b/src/app/ModuloNegocio/pg-gestionofertas/pg-gestionofertas.component.html
@@ -122,30 +122,60 @@
         </p-table>
           <!-- Fin Tabla de todas las ofertas -->
 
-
           <p-dialog
             header="Nuevo"
             [(visible)]="visibleNuevo"
             [modal]="true"
-            [style]="{ width: '25vw' }"
+            [style]="{ width: '40vw' }"
             [draggable]="false"
             [resizable]="false"
           >
           <ng-template pTemplate="header">
-            <span class="text-xl font-bold">Nuevo</span>
+            <span class="text-xl ">Nueva oferta</span>
           </ng-template>
           <ng-template pTemplate="content">
-            <div class="p-inputgroup">
-              <span class="p-inputgroup-addon">
-                  <i class="pi pi-pencil"></i>
-              </span>
-              <input pInputText placeholder="Oferta" [(ngModel)]="newoferta" class="p-inputtext-sm" (input)="newoferta = newoferta"/>
-            </div>
+            
+            <form #newOfertaform="ngForm" (ngSubmit)="RegistrarNuevo(newOfertaform)" class="row g-3 needs-validation" novalidate style="margin-top: 0px;">
+
+              <div class="col-12 form-group" style="margin-top: -10px;">
+                <label for="newoferta" class="form-label" style="font-size: 14px;">Oferta nueva</label>
+                <div class="input-group has-validation">
+                  <input type="text" [(ngModel)]="newoferta" name="newoferta" class="form-control" id="newoferta" required style="font-size: 13px;" placeholder="Descripcion de la oferta">
+                  <div class="invalid-feedback floating-invalid-feedback">Debes ingresar un correo electrónico!</div>
+                </div>
+              </div>
+
+              <div class="col-12 form-group" style="margin-top: -10px;">
+                <label for="fecha_inicio" class="form-label" style="font-size: 14px;">Fecha inicio de la oferta</label>
+                <div class="input-group has-validation">
+                  <input type="datetime-local" name="fecha_inicio" [(ngModel)]="fecha_inicio" class="form-control" id="fecha_inicio" required style="font-size: 13px;">
+                  <div class="invalid-feedback floating-invalid-feedback">Ingresa una fecha de creación válida.</div>
+                </div>
+              </div>
+
+              <div class="col-12 form-group" style="margin-top: -10px;">
+                <label for="fecha_fin" class="form-label" style="font-size: 14px;">Fecha fin de la oferta</label>
+                <div class="input-group has-validation">
+                  <input type="datetime-local" name="fecha_fin" [(ngModel)]="fecha_fin" class="form-control" id="fecha_fin" required style="font-size: 13px;">
+                  <div class="invalid-feedback floating-invalid-feedback">Ingresa una fecha de creación válida.</div>
+                </div>
+              </div>
+
+              <div class="col-12 form-group" style="margin-top: -10px;">
+                  <label for="gc_necesarios" class="form-label" style="font-size: 14px;">Costo en GreenCoins</label>
+                  <div class="input-group has-validation">
+                    <input type="number" [(ngModel)]="gc_necesarios" name="gc_necesarios" class="form-control"   id="gc_necesarios" required style="font-size: 13px;" min="1" max="1000" >
+                    <div class="invalid-feedback floating-invalid-feedback">Debes ingresar una cantidad reciclada valida (min 1 - max 1000)!</div>
+                  </div>
+              </div>
+              
+              <div class="col-12" style="margin-top: 10px;">
+                <button class="btn btn-primary w-100" type="submit">Registrar</button>
+              </div>
+            </form>
+
           </ng-template>
-          
-          <ng-template pTemplate="footer">
-            <p-button icon="pi pi-save"  label="Registrar" styleClass="p-button-sm" (click)="RegistrarNuevo()"></p-button>
-          </ng-template>
+        
           
           </p-dialog>
 
@@ -154,56 +184,77 @@
             header="Actualización"
             [(visible)]="visibleEditar"
             [modal]="true"
-            [style]="{ width: '25vw' }"
+            [style]="{ width: '40vw' }"
             [draggable]="false"
             [resizable]="false"
           >
           <ng-template pTemplate="header">
-            <span class="text-xl font-bold">Actualización</span>
+            <span class="text-xl">Actualización de oferta</span>
           </ng-template>
           
           <ng-template pTemplate="content">
-            <div class="p-inputgroup">
-              <span class="p-inputgroup-addon">
-                  <i class="pi pi-pencil"></i>
-              </span>
-              <input pInputText placeholder="Valor" [(ngModel)]="objSeleccion.int_valor" class="p-inputtext-sm"/>
-            </div>
-          </ng-template>
-          
-          <ng-template pTemplate="footer">
-            <p-button icon="pi pi-save"  label="Actualizar" styleClass="p-button-sm" (click)="RegistrarActualizacion()"></p-button>
+            <form #newOfertaform="ngForm" (ngSubmit)="RegistrarActualizacion(newOfertaform)" class="row g-3 needs-validation" novalidate style="margin-top: 0px;">
+
+              <div class="col-12 form-group" style="margin-top: -10px;">
+                <label for="newoferta" class="form-label" style="font-size: 14px;">Oferta nueva</label>
+                <div class="input-group has-validation">
+                  <input type="text" [(ngModel)]="newoferta" name="newoferta" class="form-control" id="newoferta" required style="font-size: 13px;" placeholder="Descripcion de la oferta">
+                  <div class="invalid-feedback floating-invalid-feedback">Debes ingresar un correo electrónico!</div>
+                </div>
+              </div>
+
+              <div class="col-12 form-group" style="margin-top: -10px;">
+                <label for="fecha_inicio" class="form-label" style="font-size: 14px;">Fecha inicio de la oferta</label>
+                <div class="input-group has-validation">
+                  <input type="datetime-local" name="fecha_inicio" [(ngModel)]="fecha_inicio" class="form-control" id="fecha_inicio" required style="font-size: 13px;">
+                  <div class="invalid-feedback floating-invalid-feedback">Ingresa una fecha de creación válida.</div>
+                </div>
+              </div>
+
+              <div class="col-12 form-group" style="margin-top: -10px;">
+                <label for="fecha_fin" class="form-label" style="font-size: 14px;">Fecha fin de la oferta</label>
+                <div class="input-group has-validation">
+                  <input type="datetime-local" name="fecha_fin" [(ngModel)]="fecha_fin" class="form-control" id="fecha_fin" required style="font-size: 13px;">
+                  <div class="invalid-feedback floating-invalid-feedback">Ingresa una fecha de creación válida.</div>
+                </div>
+              </div>
+
+              <div class="col-12 form-group" style="margin-top: -10px;">
+                  <label for="gc_necesarios" class="form-label" style="font-size: 14px;">Costo en GreenCoins</label>
+                  <div class="input-group has-validation">
+                    <input type="number" [(ngModel)]="gc_necesarios" name="gc_necesarios" class="form-control"   id="gc_necesarios" required style="font-size: 13px;" min="1" max="1000" >
+                    <div class="invalid-feedback floating-invalid-feedback">Debes ingresar una cantidad reciclada valida (min 1 - max 1000)!</div>
+                  </div>
+              </div>
+              
+              <div class="col-12" style="margin-top: 10px;">
+                <button class="btn btn-primary w-100" type="submit">Actualizar</button>
+              </div>
+            </form>
           </ng-template>
       
           </p-dialog>
 
 
           <p-dialog
-            header="Estado"
+            header="Eliminar oferta"
             [(visible)]="visibleEstado"
             [modal]="true"
             [style]="{ width: '25vw' }"
             [draggable]="false"
-            [resizable]="false"
+            [resizable]="true"
           >
-          <ng-template pTemplate="header">
-            <span class="text-xl font-bold">¿Estas seguro de eliminar esta oferta?</span>
-          </ng-template>
           
-          <ng-template pTemplate="content">
-            <div class="p-inputgroup">
-              <span class="p-inputgroup-addon">
-                  <i class="pi pi-pencil"></i>
-              </span>
-              <input pInputText placeholder="Estado" [(ngModel)]="objSeleccion.int_valor" class="p-inputtext-sm" readonly/>
-            </div>
+          <ng-template pTemplate="content" >
+            <span class="text-xl " style="margin-top: 75px;">¿Estas seguro de eliminar esta oferta?</span> 
           </ng-template>
           
           <ng-template pTemplate="footer">
-            <p-button icon="pi pi-save"  label="Guardar" styleClass="p-button-sm" (click)="EstadoCambiarActualizacion()"></p-button>
+            <p-button icon="pi pi-save"  label="Eliminar" styleClass="p-button-sm" (click)="DesactivarOferta()"></p-button>
           </ng-template>
           
           </p-dialog>
+
         </div>
 
       </div>
