--- a/src/app/ModuloNegocio/pg-dashnegocio/pg-dashnegocio.component.html
+++ b/src/app/ModuloNegocio/pg-dashnegocio/pg-dashnegocio.component.html
@@ -1,4 +1,3 @@
-<p>pg-dashnegocio works!</p>
 <!DOCTYPE html>
 <html lang="en">
 
@@ -6,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Dashboard - Ciudadano</title>
+  <title>Dashboard - Negocio</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -295,7 +294,7 @@
     <!-- Contenido para el dash del negocio -->
     <div *ngIf="seccion === '1'">  
     <div class="pagetitle">
-      <h1>Dashboard</h1>
+      <h1>Dashboard - {{ ngc?.nombre }}</h1>
     </div><!-- End Page Title -->
 
     <section class="section dashboard">
