--- a/src/app/ModuloNegocio/pg-dashnegocio/pg-dashnegocio.component.html
+++ b/src/app/ModuloNegocio/pg-dashnegocio/pg-dashnegocio.component.html
@@ -294,11 +294,11 @@
   <main id="main" class="main" [class.toggle-sidebar]="sidebarCollapsed">
     <!-- Contenido para el dash del negocio -->
     <div *ngIf="seccion === '1'">  
-    <div class="pagetitle">
-      <h1>Dashboard</h1>
-    </div><!-- End Page Title -->
+      <div class="pagetitle">
+        <h1>Dashboard</h1>
+      </div><!-- End Page Title -->
 
-    <section class="section dashboard">
+      <section class="section dashboard">
       <div class="row">
 
         <!-- Left side columns -->
@@ -327,12 +327,10 @@
 
                   <div class="d-flex align-items-center">
                     <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
-                      <i class="bi bi-cart"></i>
+                      <i class="bi bi-plus-slash-minus"></i>
                     </div>
                     <div class="ps-3">
                       <h6>{{this.cant_ofts+" "}}<span style="font-size: 20px;">ofertas</span></h6>
-                      <span class="text-success small pt-1 fw-bold">12%</span> <span class="text-muted small pt-2 ps-1">increase</span>
-
                     </div>
                   </div>
                 </div>
@@ -358,16 +356,14 @@
                 </div>
 
                 <div class="card-body">
-                  <h5 class="card-title">Tus puntos verdes <span>| Tienes</span></h5>
+                  <h5 class="card-title">Tus puntos verdes </h5>
 
                   <div class="d-flex align-items-center">
                     <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
-                      <i class="bi bi-currency-dollar"></i>
+                      <i class="bi bi-geo-alt-fill"></i>
                     </div>
                     <div class="ps-3">
-                      <h6>{{this.cant_pvs+" "}}<span style="font-size: 20px;">PV activos</span></h6>
-                      <span class="text-success small pt-1 fw-bold">8%</span> <span class="text-muted small pt-2 ps-1">increase</span>
-
+                      <h6>{{this.cant_pvs+" "}}<span style="font-size: 20px;">activos</span></h6>
                     </div>
                   </div>
                 </div>
