--- a/src/app/ModuloNegocio/pg-dashnegocio/pg-dashnegocio.component.html
+++ b/src/app/ModuloNegocio/pg-dashnegocio/pg-dashnegocio.component.html
@@ -330,6 +330,7 @@
                     </div>
                     <div class="ps-3">
                       <h6>{{this.cant_ofts+" "}}<span style="font-size: 20px;">ofertas</span></h6>
+                      <a href="" class="text-success small pt-1 fw-bold" (click)="SeccionGestionOfertas($event)">Agregar</a><span class="text-muted small pt-2 ps-1">ofertas</span>
                     </div>
                   </div>
                 </div>
@@ -340,7 +341,7 @@
             <!-- Revenue Card -->
             <div class="col-xxl-4 col-md-6">
               <div class="card info-card revenue-card">
-
+<!-- 
                 <div class="filter">
                   <a class="icon" data-bs-toggle="dropdown" (click)="toggleMenu('menu2', $event)" role="button"><i class="bi bi-three-dots"></i></a>
                   <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow" *ngIf="menus['menu2']">
@@ -353,7 +354,7 @@
                     <li><a class="dropdown-item" href="#">This Year</a></li>
                   </ul>
                 </div>
-
+ -->
                 <div class="card-body">
                   <h5 class="card-title">Tus puntos verdes </h5>
 
@@ -363,6 +364,7 @@
                     </div>
                     <div class="ps-3">
                       <h6>{{this.cant_pvs+" "}}<span style="font-size: 20px;">activos</span></h6>
+                      <a href="" class="text-success small pt-1 fw-bold" (click)="SeccionPuntosVerdes($event)">Agregar</a><span class="text-muted small pt-2 ps-1">PVs</span>
                     </div>
                   </div>
                 </div>
@@ -374,7 +376,7 @@
             <!-- Reports -->
             <div class="col-12">
               <div class="card">
-
+<!-- 
                 <div class="filter">
                   <a class="icon" data-bs-toggle="dropdown" (click)="toggleMenu('menu4', $event)" role="button"><i class="bi bi-three-dots"></i></a>
                   <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow" *ngIf="menus['menu4']">
@@ -387,7 +389,7 @@
                     <li><a class="dropdown-item" href="#">This Year</a></li>
                   </ul>
                 </div>
-
+ -->
                 <div class="card-body">
                   <h5 class="card-title">Puntos Verdes <span>/Ecuador</span></h5>
                   <!-- Line Chart -->
